fixed scrollbar display

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     scrollbar-width: none;  /* Hide scrollbar for Firefox */
 }
 
-.body::-webkit-scrollbar { 
+::-webkit-scrollbar { 
     display: none;  /* Hide scrollbar for Safari and Chrome */
 }
 
